# xdcc-search

./: CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: main.yml
resources/: ubuntu.json
src/: lib.rs  sunxdcc.rs
